--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,15 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.13",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^44.0.6",
+    "expo-status-bar": "~1.2.0",
     "react": "18.2.0",
-    "react-native": "0.72.5"
+    "react-native": "0.64.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "@types/react-native": "~0.64.12"
   },
   "private": true
 }
